# password_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: GetSVG.tsx  Loading.tsx  Login.tsx  Main.tsx  Model.tsx  PasswordStrengthIndicator.tsx  RecordDetail.tsx  Register.tsx  Settings.tsx  database.rs  index.tsx  lib.rs  login.html  login.ts  main.html  main.rs  main.ts  register.html  register.ts  script.ts  style.css  utils.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud.rs  command.rs  database.rs  frontend.rs  lib.rs  main.rs  totp.rs  utils.rs  window.rs
src-tauri/src/command/: authentication.rs  cloud.rs  database.rs  password.rs  totp.rs  validation.rs  window.rs
src-tauri/src/database/: convert.rs  model.rs  models.rs  utils.rs
src-tauri/src/database/model/: value.rs
src-tauri/src/database/models/: basic.rs  specific.rs
src-tauri/src/frontend/: command.rs  event.rs  login.rs  main.rs  menu.rs  register.rs  window.rs
src-tauri/src/window/: menu.rs
src-tauri/src/window/menu/: event.rs
src/css/: style.css
src/database/: models.rs  utils.rs
src/database/models/: basic.rs  specific.rs  traits.rs
src/html/: login.html  main.html  register.html
src/scripts/: login.ts  register.ts
